Fixed contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -396,7 +396,7 @@ picture img {
     text-align: center;
     margin-top: 20px;
     background-color: #1FC1C3;
-    color: #FFFFFF;
+    color: #000000;
     border-radius: 15PX;
     margin-bottom: 30PX;
     padding: 10px 0 10px 0;
